<resources>
    <string name="app_name">Blood Donor</string>
    <string name="user_name">User Name</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="need_help">Need Help?</string>
    <string name="remember_me">Remember me</string>
    <string name="email">Email</string>
    <string name="we_missed_you_login_to_get_started">We missed you! Login to get started</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_instead">Login instead</string>
    <string name="register">Register</string>
    <string name="mobile">Phone Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="already_have_account">Already have an account</string>
</resources>