<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/hind_regular"
                android:text="@string/welcome_back"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/_30ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hind_regular"
                android:text="@string/we_missed_you_login_to_get_started"
                android:textColor="@color/colorTextWhite"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/card_background"
        android:elevation="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/hind_regular"
            android:text="LOGIN"
            android:textColor="@color/colorTextBlack"
            android:textSize="26dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableTint="@color/colorTextBlack"
                android:fontFamily="@font/hind_regular"
                android:hint="@string/mobile"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_25sdp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/hind_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_30sdp"
                android:textColor="@color/colorTextBlack"
                android:textColorHint="@color/colorPlaceholder" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="18dp"
                android:buttonTint="@color/colorBlack"
                android:fontFamily="@font/hind_regular"
                android:text="@string/remember_me"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12ssp"
                    android:layout_weight="1"
                    android:fontFamily="@font/hind_regular"
                    android:text="@string/need_help"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/hind_regular"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_bg"
                    android:textColor="@color/colorButtonText"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:fontFamily="@font/hind_regular"
                android:text="@string/don_t_have_account"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/registerStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:fontFamily="@font/hind_regular"
                android:text="@string/create_a_new_account"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>